<resources>
    <string name="app_name">MyApp</string>
    <string name="welcomeback">Welcome Back</string>
    <string name="getStarted">Get Started</string>
    <string name="wb_txt">sign in to access your account</string>
    <string name="gs_txt">by creating a free account</string>
    <string name="mail">Enter your Email</string>
    <string name="fullname">Full Name</string>
    <string name="nPh">Phone Number</string>
    <string name="psswd">Password</string>
    <string name="forgot">forgot password</string>
    <string name="remember">Remember me</string>
    <string name="alrd">Already a member?</string>
    <string name="terms">by cheking the box you agree to our terms and coditions</string>
</resources>