<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccount">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".35" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editTextTextPersonName2"
                android:layout_width="335dp"
                android:layout_height="60dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/text_background"
                android:drawableEnd="@drawable/ic_baseline_smartphone_24"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="Phone number"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:paddingLeft="24dp"
                android:textColor="@color/grey_200"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

            <EditText
                android:id="@+id/editTextTextPersonName4"
                android:layout_width="335dp"
                android:layout_height="60dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/text_background"
                android:drawableEnd="@drawable/ic_baseline_lock_24"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="Strong Password"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:paddingLeft="24dp"
                android:textColor="@color/grey_200"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="335dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/text_background"
                android:drawableEnd="@drawable/ic_baseline_person_24"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="Full Name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:paddingLeft="24dp"
                android:scrollbarAlwaysDrawHorizontalTrack="false"
                android:scrollbarAlwaysDrawVerticalTrack="false"
                android:textColor="@color/grey_200"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextTextPersonName3"
                android:layout_width="335dp"
                android:layout_height="60dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/text_background"
                android:drawableEnd="@drawable/ic_baseline_email_24"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="Email"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:paddingLeft="24dp"
                android:scrollbarAlwaysDrawHorizontalTrack="false"
                android:scrollbarAlwaysDrawVerticalTrack="false"
                android:textColor="@color/grey_200"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="340dp"
                android:layout_height="48dp"
                android:layout_marginTop="2dp"
                android:text="@string/terms"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />

            <Button
                android:id="@+id/button"
                android:layout_width="335dp"
                android:layout_height="60dp"
                android:layout_marginTop="96dp"
                android:text="Next"
                android:textSize="20sp"
                app:cornerRadius="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Already a member?"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button" />

            <TextView
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:text="Login"
                android:textColor="@color/purple_500"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.111"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/button" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="126dp"
        android:layout_marginTop="118dp"
        android:layout_marginEnd="127dp"
        android:fontFamily="sans-serif"
        android:text="@string/getStarted"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.356" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gs_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>